[package]
name = "virtio-spec"
version = "0.2.0"
authors = ["Martin Kröning <mkroening@posteo.net>"]
edition = "2021"
description = "Definitions from the Virtual I/O Device (VIRTIO) specification."
repository = "https://github.com/rust-osdev/virtio-spec-rs"
license = "MIT OR Apache-2.0"
keywords = ["virtio", "specification", "driver", "net", "pci"]
categories = ["external-ffi-bindings", "no-std::no-alloc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
allocator-api2 = { version = "0.2", default-features = false, features = ["alloc"], optional = true }
bitfield-struct = "0.11"
bitflags = "2"
endian-num = { version = "0.2", features = ["bitflags", "linux-types"] }
num_enum = { version = "0.7", default-features = false }
pci_types = { version = "0.10", optional = true }
volatile = "0.6"
volatile-macro = "0.6"
zerocopy = { version = "0.8", optional = true, default-features = false }
zerocopy-derive = { version = "0.8", optional = true }

[features]
alloc = ["dep:allocator-api2"]
mmio = []
nightly = ["allocator-api2/nightly"]
pci = ["dep:pci_types"]
zerocopy = ["dep:zerocopy", "dep:zerocopy-derive", "endian-num/zerocopy"]
